---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Check that cargo pods have items in them during their next tick
    - Hmm
    - Add the item with quality to the flow
    - Localize the surface names
    - Put the cargo surfaces in the expected order
    - Compute flow surface names ahead of time
    - Detect launching and launched rockets
    - Flow when a cargo pod transitions from platform to planet
    - Test hijacking the p key, abandoning since it'll likely break due to latency
    - Refractor
    - Turn on_tick handler conditional
    - Determine planet name when registering the cargo pod
    - Neither driver nor passenger work
    - Assert cargo pod created on nauvis ignored
    - Decide we are not gonna care about rockets/pods mid-flight when the mod gets added
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 11
  Info:
    - Initial commit